// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Alert story renders snapshot 1`] = `
<div
  class="toastDialog colorAlert"
>
  <div
    class="content"
  >
    <div
      class="iconAlert"
    >
      <svg
        class="svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          alert
        </title>
        <path
          d="M0,0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
        />
      </svg>
    </div>
    <p
      class="typography sizeSm colorInherit"
    >
      You've got toast!
    </p>
  </div>
</div>
`;

exports[`<Toast /> Dismissable story renders snapshot 1`] = `
<div
  class="toastDialog colorSuccess"
>
  <div
    class="content"
  >
    <div
      class="iconSuccess"
    >
      <svg
        class="svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          success
        </title>
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </div>
    <p
      class="typography sizeSm colorInherit"
    >
      You've got toast!
    </p>
  </div>
  <button
    class="close button variantLink colorSuccess"
    type="button"
  >
    ​
    <svg
      class="svgIcon"
      fill="currentColor"
      height="32px"
      role="img"
      style="--svg-icon-size: 32px;"
      viewBox="0 0 24 24"
      width="32px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        close
      </title>
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Toast /> Success story renders snapshot 1`] = `
<div
  class="toastDialog colorSuccess"
>
  <div
    class="content"
  >
    <div
      class="iconSuccess"
    >
      <svg
        class="svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          success
        </title>
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </div>
    <p
      class="typography sizeSm colorInherit"
    >
      You've got toast!
    </p>
  </div>
</div>
`;
